--- a/.github/workflows/benchmarks_pr.yml
+++ b/.github/workflows/benchmarks_pr.yml
@@ -33,7 +33,7 @@ jobs:
           python -m pip install git+https://github.com/pytorch/tensordict 
           python setup.py develop
           python -m pip install pytest pytest-benchmark
-          python3 -m pip install "gymnasium[accept-rom-license,atari]"
+          python3 -m pip install "gym[accept-rom-license,atari]"
           python3 -m pip install dm_control
       - name: Setup benchmarks
         run: |
@@ -106,7 +106,7 @@ jobs:
           python3 -m pip install git+https://github.com/pytorch/tensordict 
           python3 setup.py develop
           python3 -m pip install pytest pytest-benchmark
-          python3 -m pip install "gymnasium[accept-rom-license,atari]"
+          python3 -m pip install "gym[accept-rom-license,atari]"
           python3 -m pip install dm_control
       - name: check GPU presence
         run: |
