--- a/examples/impala/config_single_node.yaml
+++ b/examples/impala/config_single_node.yaml
@@ -2,6 +2,9 @@
 env:
   env_name: PongNoFrameskip-v4
 
+# Device for the forward and backward passes
+local_device: "cuda:0"
+
 # collector
 collector:
   frames_per_batch: 80
