--- a/examples/impala/config_multi_node_ray.yaml
+++ b/examples/impala/config_multi_node_ray.yaml
@@ -24,7 +24,7 @@ ray_init_config:
   storage: null
 
 # Device for the forward and backward passes
-device: "cuda:0"
+local_device: "cuda:0"
 
 # Resources assigned to each IMPALA rollout collection worker
 remote_worker_resources:
