--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -92,7 +92,7 @@ jobs:
   upload:
     needs: build-docs
     if: github.repository == 'pytorch/rl' && github.event_name == 'push' && 
-        ((github.ref_type == 'branch' && github.ref_name == 'main') || github.ref_type == 'tag' || contains(github.event.pull_request.labels.*.name, 'ciflow/docs'))
+        ((github.ref_type == 'branch' && github.ref_name == 'main') || github.ref_type == 'tag')
     permissions:
       contents: write
     uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
