--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -129,6 +129,7 @@ jobs:
 
         # mkdir -p "${TARGET_FOLDER}"
         # rm -rf "${TARGET_FOLDER}"/*
+        echo $(ls "${RUNNER_ARTIFACT_DIR}")
         mv "${RUNNER_ARTIFACT_DIR}"/html/* "${TARGET_FOLDER}"
         git add "${TARGET_FOLDER}" || true
 
