--- a/examples/discrete_sac/config.yaml
+++ b/examples/discrete_sac/config.yaml
@@ -1,37 +1,52 @@
-# Logger
-logger: wandb
-exp_name: discrete_sac
-record_interval: 1
-mode: online
 
-# Environment
-env_name: CartPole-v1
-frame_skip: 1
-from_pixels: false
-reward_scaling: 1.0
-init_env_steps: 1000
-seed: 42
+# task and env
+env:
+  name: CartPole-v1
+  task: ""
+  exp_name: ${env.name}_DiscreteSAC
+  library: gym
+  seed: 42
+  max_episode_steps: 500
 
-# Collector
-env_per_collector: 1
-max_frames_per_traj: 500
-total_frames: 1000000
-init_random_frames: 5000
-frames_per_batch: 500 # 500 * env_per_collector
+# collector
+collector:
+  total_frames: 25000
+  init_random_frames: 1000
+  init_env_steps: 1000
+  frames_per_batch: 500
+  reset_at_each_iter: False
+  device: cpu
+  env_per_collector: 1
+  num_workers: 1
 
-# Replay Buffer
-prb: 0
-buffer_size: 1000000
+# replay buffer
+replay_buffer:
+  prb: 0 # use prioritized experience replay
+  size: 1000000
+  scratch_dir: ${env.exp_name}_${env.seed}
 
-# Optimization
-utd_ratio: 1.0
-gamma: 0.99
-batch_size: 256
-lr: 3.0e-4
-weight_decay: 0.0
-target_update_polyak: 0.995
-target_entropy_weight: 0.2
-# default is 0.98 but needs to be decreased for env
-# with small action space
+# optim
+optim:
+  utd_ratio: 1.0
+  gamma: 0.99
+  batch_size: 256
+  lr: 3.0e-4
+  weight_decay: 0.0
+  target_update_polyak: 0.995
+  target_entropy_weight: 0.2
+  target_entropy: "auto"
+  loss_function: l2
+  # default is 0.98 but needs to be decreased for env
+  # with small action space
 
-device: cpu
+# network
+network:
+  hidden_sizes: [256, 256]
+  activation: relu
+  device: "cuda:0"
+
+# logging
+logger:
+  backend: wandb
+  mode: online
+  eval_iter: 5000
