--- a/examples/dreamer/config.yaml
+++ b/examples/dreamer/config.yaml
@@ -15,7 +15,7 @@ from_pixels: True
 env_per_collector: 8
 num_workers: 8
 collector_device: cpu
-model_device: cuda:0
+model_device: cuda:1
 frames_per_batch: 800
 optim_steps_per_batch: 80
 record_interval: 1
@@ -32,8 +32,10 @@ init_env_steps: 1000
 init_random_frames: 5000
 logger: wandb
 offline_logging: False
-normalize_rewards_online: True
+normalize_rewards_online: False
 normalize_rewards_online_scale: 5.0
 normalize_rewards_online_decay: 0.99999
 reward_scaling: 1.0
 discount_loss: True
+
+imagination_horizon: 15
