--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ per-file-ignores =
     torchrl/objectives/sac.py: TOR101
     torchrl/objectives/td3.py: TOR101
     torchrl/objectives/value/advantages.py: TOR101
+    tutorials/*/**.py: T201
+    build_tools/setup_helpers/extension.py: T201
+    examples/torchrl_features/*.py: T201
+    test/opengl_rendering.py: T201
+    */**/run-clang-format.py: T201
 
 exclude = venv
 extend-select = B901, C401, C408, C409, TOR0, TOR1, TOR2
