--- a/.github/workflows/test-linux-libs.yml
+++ b/.github/workflows/test-linux-libs.yml
@@ -317,3 +317,30 @@ jobs:
         bash .github/unittest/linux_libs/scripts_vd4rl/install.sh
         bash .github/unittest/linux_libs/scripts_vd4rl/run_test.sh
         bash .github/unittest/linux_libs/scripts_vd4rl/post_process.sh
+
+  unittests-vmas:
+    strategy:
+      matrix:
+        python_version: ["3.9"]
+        cuda_arch_version: ["12.1"]
+    uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
+    with:
+      repository: pytorch/rl
+      runner: "linux.g5.4xlarge.nvidia.gpu"
+      gpu-arch-type: cuda
+      gpu-arch-version: "11.7"
+      timeout: 120
+      script: |
+        set -euo pipefail
+        export PYTHON_VERSION="3.9"
+        export CU_VERSION="12.1"
+        export TAR_OPTIONS="--no-same-owner"
+        export UPLOAD_CHANNEL="nightly"
+        export TF_CPP_MIN_LOG_LEVEL=0
+
+        nvidia-smi
+
+        bash .github/unittest/linux_libs/scripts_vmas/setup_env.sh
+        bash .github/unittest/linux_libs/scripts_vmas/install.sh
+        bash .github/unittest/linux_libs/scripts_vmas/run_test.sh
+        bash .github/unittest/linux_libs/scripts_vmas/post_process.sh
