--- a/examples/iql/offline_config.yaml
+++ b/examples/iql/offline_config.yaml
@@ -2,7 +2,7 @@
 env:
   name: HalfCheetah-v2
   task: ""
-  library: gym
+  backend: gym
   exp_name: iql_${replay_buffer.dataset}
   n_samples_stats: 1000
   seed: 0
