--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -22,6 +22,7 @@ buffer:
 # logger
 logger:
   backend: null
+  backend_kwargs: null
   exp_name: DQN
   test_interval: 1_000_000
   num_test_episodes: 3
