add sac td3 redq

--- a/examples/a2c/config_atari.yaml
+++ b/examples/a2c/config_atari.yaml
@@ -11,7 +11,7 @@ collector:
 # logger
 logger:
   backend: wandb
-  backend_kwargs: null
+  project_name: rl_examples_a2c
   exp_name: Atari_Schulman17
   test_interval: 40_000_000
   num_test_episodes: 3
