--- a/examples/dqn/config_cartpole.yaml
+++ b/examples/dqn/config_cartpole.yaml
@@ -20,8 +20,8 @@ buffer:
 
 # logger
 logger:
-  backend: null
-  backend_kwargs: null
+  backend: wandb
+  project_name: rl_examples_dqn
   exp_name: DQN
   test_interval: 50_000
   num_test_episodes: 5
