--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -21,8 +21,8 @@ buffer:
 
 # logger
 logger:
-  backend: null
-  backend_kwargs: null
+  backend: wandb
+  project_name: rl_examples_dqn
   exp_name: DQN
   test_interval: 1_000_000
   num_test_episodes: 3
