--- a/examples/ppo/config_mujoco.yaml
+++ b/examples/ppo/config_mujoco.yaml
@@ -10,7 +10,7 @@ collector:
 # logger
 logger:
   backend: wandb
-  backend_kwargs: null
+  project_name: rl_examples_ppo
   exp_name: Mujoco_Schulman17
   test_interval: 1_000_000
   num_test_episodes: 5
