iql cql dreamer impala benchmarks

--- a/examples/cql/discrete_cql_config.yaml
+++ b/examples/cql/discrete_cql_config.yaml
@@ -24,6 +24,7 @@ collector:
 # Logger
 logger:
   backend: wandb
+  project_name: rl_examples_cql
   log_interval: 5000 # record interval in frames
   eval_steps: 200
   mode: online
