--- a/examples/iql/online_config.yaml
+++ b/examples/iql/online_config.yaml
@@ -23,6 +23,7 @@ collector:
 # logger
 logger:
   backend: wandb
+  project_name: rl_examples_iql
   log_interval: 5000 # record interval in frames
   eval_steps: 200
   mode: online
