--- a/examples/cql/online_config.yaml
+++ b/examples/cql/online_config.yaml
@@ -23,6 +23,7 @@ collector:
 # logger
 logger:
   backend: wandb
+  project_name: rl_examples_cql
   log_interval: 5000 # record interval in frames
   eval_steps: 1000
   mode: online
