--- a/examples/cql/discrete_cql_config.yaml
+++ b/examples/cql/discrete_cql_config.yaml
@@ -3,7 +3,6 @@ env:
   name: CartPole-v1
   task: ""
   backend: gym
-  exp_name: cql_cartpole_gym
   n_samples_stats: 1000
   max_episode_steps: 200
   seed: 0
@@ -24,7 +23,9 @@ collector:
 # Logger
 logger:
   backend: wandb
-  project_name: rl_examples_cql
+  project_name: torchrl_example_cql
+  group_name: null
+  exp_name: cql_cartpole_gym
   log_interval: 5000 # record interval in frames
   eval_steps: 200
   mode: online
