--- a/examples/decision_transformer/odt_config.yaml
+++ b/examples/decision_transformer/odt_config.yaml
@@ -20,7 +20,8 @@ env:
 # logger
 logger:
   backend: wandb
-  project_name: rl_examples_odt
+  project_name: torchrl_example_odt
+  group_name: null
   exp_name: oDT-HalfCheetah-medium-v2
   model_name: oDT
   pretrain_log_interval: 500 # record interval in frames
