--- a/examples/iql/offline_config.yaml
+++ b/examples/iql/offline_config.yaml
@@ -3,14 +3,15 @@ env:
   name: HalfCheetah-v2
   task: ""
   library: gym
-  exp_name: iql_${replay_buffer.dataset}
   n_samples_stats: 1000
   seed: 0
 
 # logger
 logger:
   backend: wandb
-  project_name: rl_examples_iql
+  project_name: torchrl_example_iql
+  exp_name: iql_${replay_buffer.dataset}
+  group_name: null
   eval_iter: 500
   eval_steps: 1000
   mode: online
