--- a/examples/rlhf/config/train_rlhf.yaml
+++ b/examples/rlhf/config/train_rlhf.yaml
@@ -3,7 +3,8 @@ io:
   log_interval: 1
   eval_iters: 10
   logger: wandb
-  project_name: rl_examples_rlhf
+  project_name: torchrl_example_rlhf
+  group_name: null
 data:
   batch_size: 4 # if gradient_accumulation_steps > 1, this is the micro-batch size
   block_size: 550
