--- a/examples/a2c/config_mujoco.yaml
+++ b/examples/a2c/config_mujoco.yaml
@@ -10,7 +10,8 @@ collector:
 # logger
 logger:
   backend: wandb
-  project_name: rl_examples_a2c
+  project_name: torchrl_example_a2c
+  group_name: null
   exp_name: Mujoco_Schulman17
   test_interval: 1_000_000
   num_test_episodes: 5
