--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -22,7 +22,8 @@ buffer:
 # logger
 logger:
   backend: wandb
-  project_name: rl_examples_dqn
+  project_name: torchrl_example_dqn
+  group_name: null
   exp_name: DQN
   test_interval: 1_000_000
   num_test_episodes: 3
