--- a/examples/impala/config_multi_node_ray.yaml
+++ b/examples/impala/config_multi_node_ray.yaml
@@ -41,6 +41,8 @@ collector:
 # logger
 logger:
   backend: wandb
+  project_name: torchrl_example_impala_ray
+  group_name: null
   exp_name: Atari_IMPALA
   test_interval: 200_000_000
   num_test_episodes: 3
