--- a/examples/impala/config_multi_node_submitit.yaml
+++ b/examples/impala/config_multi_node_submitit.yaml
@@ -22,6 +22,8 @@ collector:
 # logger
 logger:
   backend: wandb
+  project_name: torchrl_example_impala_submitit
+  group_name: null
   exp_name: Atari_IMPALA
   test_interval: 200_000_000
   num_test_episodes: 3
