--- a/examples/impala/config_single_node.yaml
+++ b/examples/impala/config_single_node.yaml
@@ -14,6 +14,8 @@ collector:
 # logger
 logger:
   backend: wandb
+  project_name: torchrl_example_impala
+  group_name: null
   exp_name: Atari_IMPALA
   test_interval: 200_000_000
   num_test_episodes: 3
