--- a/examples/ddpg/config.yaml
+++ b/examples/ddpg/config.yaml
@@ -21,7 +21,7 @@ collector:
 replay_buffer:
   size: 1000000
   prb: 0 # use prioritized experience replay
-  scratch_dir: ${env.exp_name}_${env.seed}
+  scratch_dir: ${logger.exp_name}_${env.seed}
 
 # optimization
 optim:
