--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -20,7 +20,7 @@ collector:
 replay_buffer:
   size: 1000000
   prb: 0 # use prioritized experience replay
-  scratch_dir: ${env.exp_name}_${env.seed}
+  scratch_dir: ${logger.exp_name}_${env.seed}
 
 # optim
 optim:
