--- a/.github/workflows/test-linux-libs.yml
+++ b/.github/workflows/test-linux-libs.yml
@@ -16,6 +16,32 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+
+  unittests-atari-dqn:
+    strategy:
+      matrix:
+        python_version: ["3.9"]
+        cuda_arch_version: ["12.1"]
+    if: ${{ github.event_name == 'push' || contains(github.event.pull_request.labels.*.name, 'Data') }}
+    uses: pytorch/test-infra/.github/workflows/linux_job.yml@main
+    with:
+      repository: pytorch/rl
+      runner: "linux.g5.4xlarge.nvidia.gpu"
+      docker-image: "nvidia/cudagl:11.4.0-base"
+      timeout: 120
+      script: |
+        set -euo pipefail
+        export PYTHON_VERSION="3.9"
+        export CU_VERSION="cu117"
+        export TAR_OPTIONS="--no-same-owner"
+        export UPLOAD_CHANNEL="nightly"
+        export TF_CPP_MIN_LOG_LEVEL=0
+
+        bash .github/unittest/linux_libs/scripts_ataridqn/setup_env.sh
+        bash .github/unittest/linux_libs/scripts_ataridqn/install.sh
+        bash .github/unittest/linux_libs/scripts_ataridqn/run_test.sh
+        bash .github/unittest/linux_libs/scripts_ataridqn/post_process.sh
+
   unittests-brax:
     strategy:
       matrix:
