--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -1,6 +1,6 @@
 # task and env
 env:
-  name: HalfCheetah-v3
+  name: HalfCheetah-v4  # Use v4 to get rid of mujoco-py dependency
   task: ""
   library: gymnasium
   seed: 42
