--- a/examples/ppo/config_atari.yaml
+++ b/examples/ppo/config_atari.yaml
@@ -1,7 +1,7 @@
 # Environment
 env:
-  env_name: ALE/Pong-v5
-  num_envs: 1
+  env_name: PongNoFrameskip-v4
+  num_envs: 8
 
 # collector
 collector:
