--- a/examples/iql/offline_config.yaml
+++ b/examples/iql/offline_config.yaml
@@ -2,14 +2,17 @@
 env:
   name: HalfCheetah-v2
   task: ""
-  backend: gym
   exp_name: iql_${replay_buffer.dataset}
   n_samples_stats: 1000
   seed: 0
+  backend: gymnasium
 
 # logger
 logger:
   backend: wandb
+  project_name: torchrl_example_iql
+  exp_name: iql_${replay_buffer.dataset}
+  group_name: null
   eval_iter: 500
   eval_steps: 1000
   mode: online
