--- a/examples/dqn/config_atari.yaml
+++ b/examples/dqn/config_atari.yaml
@@ -21,7 +21,9 @@ buffer:
 
 # logger
 logger:
-  backend: null
+  backend: wandb
+  project_name: torchrl_example_dqn
+  group_name: null
   exp_name: DQN
   test_interval: 1_000_000
   num_test_episodes: 3
