--- a/examples/dqn/config_cartpole.yaml
+++ b/examples/dqn/config_cartpole.yaml
@@ -20,7 +20,9 @@ buffer:
 
 # logger
 logger:
-  backend: null
+  backend: wandb
+  project_name: torchrl_example_dqn
+  group_name: null
   exp_name: DQN
   test_interval: 50_000
   num_test_episodes: 5
