--- a/examples/ppo/config_atari.yaml
+++ b/examples/ppo/config_atari.yaml
@@ -11,6 +11,8 @@ collector:
 # logger
 logger:
   backend: wandb
+  project_name: torchrl_example_ppo
+  group_name: null
   exp_name: Atari_Schulman17
   test_interval: 40_000_000
   num_test_episodes: 3
