--- a/examples/redq/config.yaml
+++ b/examples/redq/config.yaml
@@ -39,13 +39,14 @@ collector:
   exploration_mode: random
 
 logger:
+  backend: wandb
+  project_name: torchrl_example_redq
+  group_name: null
+  exp_name: cheetah
   record_video: 0
   record_interval: 10
   record_frames: 10000
-  exp_name: cheetah
-  backend: wandb
-  kwargs:
-    offline: False
+  mode: online
   recorder_log_keys:
 
 optim:
