--- a/examples/sac/config.yaml
+++ b/examples/sac/config.yaml
@@ -1,8 +1,7 @@
 # environment and task
 env:
-  name: HalfCheetah-v3
+  name: HalfCheetah-v4
   task: ""
-  exp_name: ${env.name}_SAC
   library: gymnasium
   max_episode_steps: 1000
   seed: 42
@@ -21,7 +20,7 @@ collector:
 replay_buffer:
   size: 1000000
   prb: 0 # use prioritized experience replay
-  scratch_dir: ${env.exp_name}_${env.seed}
+  scratch_dir: ${logger.exp_name}_${env.seed}
 
 # optim
 optim:
@@ -46,5 +45,8 @@ network:
 # logging
 logger:
   backend: wandb
+  project_name: torchrl_example_sac
+  group_name: null
+  exp_name: ${env.name}_SAC
   mode: online
   eval_iter: 25000
