--- a/examples/td3/config.yaml
+++ b/examples/td3/config.yaml
@@ -1,8 +1,7 @@
 # task and env
 env:
-  name: HalfCheetah-v3
+  name: HalfCheetah-v4  # Use v4 to get rid of mujoco-py dependency
   task: ""
-  exp_name: ${env.name}_TD3
   library: gymnasium
   seed: 42
   max_episode_steps: 1000
@@ -22,7 +21,7 @@ collector:
 replay_buffer:
   prb: 0 # use prioritized experience replay
   size: 1000000
-  scratch_dir: ${env.exp_name}_${env.seed}
+  scratch_dir: ${logger.exp_name}_${env.seed}
 
 # optim
 optim:
@@ -47,5 +46,8 @@ network:
 # logging
 logger:
   backend: wandb
+  project_name: torchrl_example_td3
+  group_name: null
+  exp_name: ${env.name}_TD3
   mode: online
   eval_iter: 25000
