--- a/examples/cql/online_config.yaml
+++ b/examples/cql/online_config.yaml
@@ -19,7 +19,7 @@ collector:
   max_frames_per_traj: 1000
 
 
-# torchrl_logger
+# logger
 logger:
   backend: wandb
   project_name: torchrl_example_cql
