--- a/examples/impala/config_single_node.yaml
+++ b/examples/impala/config_single_node.yaml
@@ -11,7 +11,7 @@ collector:
   total_frames: 200_000_000
   num_workers: 12
 
-# torchrl_logger
+# logger
 logger:
   backend: wandb
   project_name: torchrl_example_impala
