--- a/examples/decision_transformer/odt_config.yaml
+++ b/examples/decision_transformer/odt_config.yaml
@@ -17,7 +17,7 @@ env:
   backend: gym  # D4RL uses gym so we make sure gymnasium is hidden
 
 
-# torchrl_logger
+# logger
 logger:
   backend: wandb
   project_name: torchrl_example_odt
