--- a/examples/dreamer/config.yaml
+++ b/examples/dreamer/config.yaml
@@ -24,7 +24,7 @@ collector:
   init_random_frames: 1000
   frames_per_batch: 1000
   max_frames_per_traj: 1000
-  device: cuda:0
+  device: cpu
 
 
 optimization:
@@ -64,9 +64,9 @@ replay_buffer:
 
 
 logger:
-  logger_type: wandb
+  backend: wandb
   project: dreamer-v1
   exp_name: ${env.name}-${env.task}-${env.seed}
-  mode: offline
+  mode: online
   record_interval: 30
   record_frames: 1000
