Get different python versions for testing purpose

--- a/.github/workflows/build-wheels-m1.yml
+++ b/.github/workflows/build-wheels-m1.yml
@@ -25,6 +25,7 @@ jobs:
       os: macos-arm64
       test-infra-repository: pytorch/test-infra
       test-infra-ref: main
+      limit-pr-builds: false # TODO - needs to be removed before merging
   build:
     needs: generate-matrix
     strategy:
